# BalizaIntegracionContinua

./: .gitignore  .simplecov  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  controlador_led.hpp  estado_del_build.hpp  estados.hpp  main.cpp  procesador.cpp  procesador.hpp  request.hpp  visualizador_de_estado.cpp  visualizador_de_estado.hpp
src/adaptadores/: cliente_wifi.cpp  cliente_wifi.hpp  controlador_led.cpp  controlador_led.hpp  controlador_led_built_in.cpp  controlador_led_built_in.hpp  controlador_led_rojo_verde.cpp  controlador_led_rojo_verde.hpp  controlador_luz.hpp  request.hpp  request_jenkins.cpp  request_jenkins.hpp  request_travis.cpp  request_travis.hpp  servidor_wifi.cpp  servidor_wifi.hpp  servidor_wifi_html.hpp  wifi.cpp  wifi.hpp
src/dominio/: estado_del_build.hpp  procesador.cpp  procesador.hpp  visualizador_de_estado.cpp  visualizador_de_estado.hpp
src/manejadores/: estado.cpp  estado.hpp  index.cpp  index.hpp  listador_repositorios.cpp  listador_repositorios.hpp  manejador.hpp  red.cpp  red.hpp  repositorio.cpp  repositorio.hpp  repositorio_jenkins.cpp  repositorio_jenkins.hpp  repositorio_travis.cpp  repositorio_travis.hpp
test/: CMakeLists.txt  procesador.cpp  visualizador_de_estado.cpp
test/mocks/: mock_controlador_led.cpp  mock_controlador_luz.cpp  mock_request.cpp
